<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/txtDevelopers"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/ForestGreen"
        android:textSize="@dimen/developer" />

    <TextView
        android:id="@+id/lblConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:text="@string/developing" />

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.50"
        android:gravity="top|center_vertical|center_horizontal"
        android:text="@string/names"
        android:textSize="@dimen/names" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:text="@string/txtCopyright"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>