<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayGameActivity" >

    <Button
        android:id="@+id/btnComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="PlayNewGame"
        android:text="@string/btnComputer" />

    <Button
        android:id="@+id/btnDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnComputer"
        android:layout_alignRight="@+id/btnComputer"
        android:layout_below="@+id/btnComputer"
        android:layout_marginTop="14dp"
        android:onClick="SelectDifficulty"
        android:text="@string/btnDifficulty" />

    <Button
        android:id="@+id/btnCardBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnDifficulty"
        android:layout_alignRight="@+id/btnDifficulty"
        android:layout_below="@+id/btnDifficulty"
        android:layout_marginTop="17dp"
        android:onClick="SelectCardBack"
        android:text="@string/btnBack" />

    <Button
        android:id="@+id/btnStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCardBack"
        android:layout_alignRight="@+id/btnCardBack"
        android:layout_centerVertical="true"
        android:onClick="ViewStatistics"
        android:text="@string/btnStatss" />

    <Button
        android:id="@+id/btnRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnDevelopers"
        android:layout_alignRight="@+id/btnStatistics"
        android:layout_below="@+id/btnStatistics"
        android:layout_marginTop="19dp"
        android:onClick="ViewRules"
        android:text="@string/btnRules" />

    <Button
        android:id="@+id/btnDevelopers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnStatistics"
        android:layout_alignRight="@+id/btnStatistics"
        android:layout_below="@+id/btnRules"
        android:layout_marginTop="14dp"
        android:onClick="ViewDevelopers"
        android:text="@string/btnDevelopers" />

</RelativeLayout>