<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtDisplayUserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblUser"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtDisplayEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblEmailAddress"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TextView
            android:id="@+id/txtDisplayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblName"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtStatWin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="5dp"
                    android:text="@string/numberOfWins"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtDisplayNumberOfWins"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="5dp"
                    android:text="@string/txtBlank"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtStatLoss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="5dp"
                    android:text="@string/numberOfLosses"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtDisplayNumberOfLosses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="5dp"
                    android:text="@string/txtBlank"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtStatTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="5dp"
                    android:text="@string/totalGames"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtDisplayTotalGames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="5dp"
                    android:text="@string/txtBlank"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtStatHighestWinningStreak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="5dp"
                    android:text="@string/txtHighestWinStreak"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtDisplayHighestWinningStreak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="5dp"
                    android:text="@string/txtBlank"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtStatCurrentWinningStreak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="5dp"
                    android:text="@string/txtCurrentWinStreak"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtDisplayCurrentWinningStreak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="5dp"
                    android:text="@string/txtBlank"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtStatHighestLosingStreak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="5dp"
                    android:text="@string/txtHighestLosingStreak"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtDisplayHighestLosingStreak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="5dp"
                    android:text="@string/txtBlank"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtStatCurrentLosingStreak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="5dp"
                    android:text="@string/txtCurrentLosingStreak"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/txtDisplayCurrentLosingStreak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="5dp"
                    android:text="@string/txtBlank"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>