<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/lblUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/lblUser"
        android:textSize="@dimen/dp22" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edtPassword"
        android:layout_below="@+id/edtPassword"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/lblUser"
        android:onClick="LoginClicked"
        android:text="@string/btnLogin" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblUser"
        android:layout_below="@+id/lblUser"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lblPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtUserName"
        android:layout_below="@+id/edtUserName"
        android:layout_marginTop="20dp"
        android:text="@string/lblPass"
        android:textSize="@dimen/dp22" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblPass"
        android:layout_below="@+id/lblPass"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

</RelativeLayout>
